Frankel: purpose of philosophy (TLS).

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -118,8 +118,8 @@
         <!-- Taylor: see also PhilosophyTalk: http://www.philosophytalk.org/about-us & https://twitter.com/philtalkradio (below) -->
       </li>
       <li>
-        <a href="https://www.youtube.com/watch?v=cOBkV-3Ka2Q">Why Do Philosophy?</a> 
-        is a podcast by 
+        <a href="https://www.youtube.com/watch?v=cOBkV-3Ka2Q">Why Do Philosophy?</a>
+        is a podcast by
         <a href="http://www.partiallyexaminedlife.com/">The Partially Examined Life</a>.
         <br />(The name of the website and the YouTube channel are based on the 
         statement attributed to Socrates that 
@@ -130,8 +130,8 @@
         <a href="http://www.the-philosophy.com/unexamined-life-worth-living-socrates">Socrates: An unexamined life is not worth living</a>
         on the-philosophy.com, 3 May 2012.)
       </li>
-      <li>Nigel Warburton: 
-        <a href="https://www.youtube.com/watch?v=7kYKF3IAwyw">Why studying Philosophy is so important?</a> 
+      <li>Nigel Warburton:
+        <a href="https://www.youtube.com/watch?v=7kYKF3IAwyw">Why studying Philosophy is so important?</a>
         (42 minutes, 15 October 2015).
         This talk mentions benefits of studying philosophy (<abbr>e.g.</abbr> 
         analytical skills and verbal reasoning) but that is not the most important
@@ -145,7 +145,7 @@
         saved me from poverty and drugs: that’s why I teach it to kids</a> is an article
         by Andy West (<i class="newspaper">The Guardian</i>, 19 November 2015).
         Takeaway quote:
-        <q>I teach philosophy in schools because it allows young people 
+        <q>I teach philosophy in schools because it allows young people
         to challenge authority and express themselves in a way that creates rather than destroys their life opportunities.</q>
         <br />
         <a href="http://www.theguardian.com/commentisfree/2013/nov/21/teaching-philosophy-to-children-its-a-great-idea">Teaching philosophy to children? 
@@ -234,6 +234,11 @@
         <i class="website">Why We Argue</i>, 27 July 2017 (podcast; 27 minutes).
         This interview focuses on critical thinking and critical attitudes towards information sources
         in an age in which repudiate facts instead of engaging in debate.
+      </li>
+      <li>Fraenkel, Carlos:
+        <a href="https://www.the-tls.co.uk/articles/public/really-purpose-philosophy-plato/">What, really, is the purpose of philosophy?</a>,
+        <i class="magazine"><abbr title="Times Literary Supplement">TLS</abbr></i>, 01.09.2017.
+        <!--@@PDF-->
       </li>
     </ul>
     <!-- Patrick Gentempo: "Unleashing the power of philosophy", TEDxMinot, 2014: uses "philosophy" in a very lose way. And quotes Ayn Rand's posthumous collection of essays "Philosophy: Who Needs It": https://en.wikipedia.org/wiki/Philosophy:_Who_Needs_It & https://www.youtube.com/watch?v=CXFkG34NGkU -->
@@ -1310,6 +1315,11 @@
       <li>Hristo Vassilev:
         <a href="https://dailystoic.com/books-on-stoicism/">28 Books On Stoicism: The (Hopefully) Ultimate Reading List</a>,
         <i class="website">Daily Stoic</i> (September 2017?).
+      </li>
+      <li><abbr>iai</abbr>:
+        <a href="https://iai.tv/video/neuroscience-vs-philosophy">Neuroscience <abbr>vs.</abbr> Philosophy: Explaining the secrets of the mind</a>:
+        <q>From the existence of the self to the nature of free will, many philosophers have dedicated their lives to the problems of the mind. But now some neuroscientists claim to have settled these raging debates. Is it possible we have discovered a science to replace philosophy and we can finally make real progress?</q>
+        Panel with Margaret Boden, Steven Rose and Barry C Smith.
       </li>
       <!-- @@move to humanities
         https://twitter.com/redaktionmerkur
