BBC Radio 4: Kant's Categorical Imperative.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1096,6 +1096,11 @@
         The last book is Peter Strawson's famous book
         <a href="https://en.wikipedia.org/wiki/The_Bounds_of_Sense"><i class="booktitle">The Bounds of Sense: An Essay on Kant’s Critique of Pure Reason</i></a> (1966).
       </li>
+      <li><abbr>BBC</abbr> Radio 4:
+        <a href="http://www.bbc.co.uk/programmes/b0952zl3">Kant's Categorical Imperative</a>:
+        <q>Melvyn Bragg and guests discuss how, in the Enlightenment, Immanuel Kant (1724-1804) sought to define the difference between right and wrong by applying reason, looking at the intention behind actions rather than at consequences. (&hellip;)</q>
+        <!--@@also check SoundCloud and YouTube-->
+      </li>
     </ul>
 
     <h3>Bertrand Russell (1872 – 1970)</h3>
