+ Other links: thinking (children).

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -298,6 +298,16 @@
     <!-- Richard Dawkins: "The Tyranny of the Discontinuous Mind": https://richarddawkins.net/2013/01/the-tyranny-of-the-discontinuous-mind-christmas-2011/
       Originally published in New Statesman, the Christmas issue for 2011, of which Dawkins was guest Editor. 
     -->
+    <h2>Other Links</h2>
+    <ul>
+      <li>
+        <a href="http://teach-think.org/">Center for Teaching Thinking (<abbr>CTT</abbr>)</a>.
+      </li>
+      <li>
+        <a href="http://www.abc.es/ciencia/20150626/abci-gente-piensa-descubren-201506261119.html" hreflang="es" lang="es">Un 90% de la población mundial no sabe pensar</a>,
+        <i class="website"><abbr>ABC</abbr></i>, 26.06.2015.
+      </li>
+    </ul>
   </main>
 
   <footer>
