+ Nigel Warburton: Talk with me.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -784,24 +784,6 @@
       </li>
     </ul>
 
-    <h2>Other Resources</h2>
-    <ul>
-      <li><a href="http://www.earlymoderntexts.com/">Early Modern Texts</a>
-        is a collection of philosophy texts from the end of the 
-        15th century to the beginning of the 18th century,
-        and a few from the 19th century (especially John Stuart Mill).
-      </li>
-      <li><a href="http://www.epistemelinks.com/">EpistemeLinks: Philosophy Resources on the Internet</a>
-        (no updates since 2012).
-      </li>
-      <li><a href="http://philosophy.stackexchange.com/">Philosophy</a>,
-        a question and answer site hosted by Stack Exchange.
-      </li>
-      <li>Wikipedia:
-        <a href="https://en.wikipedia.org/wiki/List_of_important_publications_in_philosophy">List of important publications in philosophy</a>.
-      </li>
-    </ul>
-
 
     <h2>Organisations That Promote or Teach Philosophy</h2>
     <p>Organisations in Europe are listed first.</p>
@@ -1261,6 +1243,25 @@
       </li>
     </ul>
 
+    <h2>Other Resources</h2>
+    <ul>
+      <li><a href="http://www.earlymoderntexts.com/">Early Modern Texts</a>
+        is a collection of philosophy texts from the end of the 
+        15th century to the beginning of the 18th century,
+        and a few from the 19th century (especially John Stuart Mill).
+      </li>
+      <li><a href="http://www.epistemelinks.com/">EpistemeLinks: Philosophy Resources on the Internet</a>
+        (no updates since 2012).
+      </li>
+      <li><a href="http://philosophy.stackexchange.com/">Philosophy</a>:
+        a question and answer site hosted by Stack Exchange.
+      </li>
+      <li>Wikipedia:
+        <a href="https://en.wikipedia.org/wiki/List_of_important_publications_in_philosophy">List of important publications in philosophy</a>.
+      </li>
+    </ul>
+
+
     <h2>Unsorted Links</h2>
     <ul>
       <li>
@@ -1325,6 +1326,10 @@
         <a href="https://iai.tv/video/neuroscience-vs-philosophy">Neuroscience <abbr>vs.</abbr> Philosophy: Explaining the secrets of the mind</a>:
         <q>From the existence of the self to the nature of free will, many philosophers have dedicated their lives to the problems of the mind. But now some neuroscientists claim to have settled these raging debates. Is it possible we have discovered a science to replace philosophy and we can finally make real progress?</q>
         Panel with Margaret Boden, Steven Rose and Barry C Smith.
+      </li>
+      <li>Nigel Warburton:
+        <a href="https://aeon.co/essays/without-conversation-philosophy-is-just-dogma">Talk with me / >Without conversation, philosophy is just dogma</a>,
+        <i class="website">Aeon</i>, no date (September/October 2017).
       </li>
       <!-- @@move to humanities
         https://twitter.com/redaktionmerkur
