Philosophy Now: Socrates, Plato and Modern Life.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -240,6 +240,10 @@
         <i class="magazine"><abbr title="Times Literary Supplement">TLS</abbr></i>, 01.09.2017.
         <!--@@PDF-->
       </li>
+      <li><i class="magazine">Philosophy Now</i>: 
+        <a href="https://philosophynow.org/categories/Themed_Articles/Socrates_Plato_and_Modern_Life">Themed Articles: Socrates, Plato and Modern Life</a>.
+        <!--@@PDF-->
+      </li>
     </ul>
     <!-- Patrick Gentempo: "Unleashing the power of philosophy", TEDxMinot, 2014: uses "philosophy" in a very lose way. And quotes Ayn Rand's posthumous collection of essays "Philosophy: Who Needs It": https://en.wikipedia.org/wiki/Philosophy:_Who_Needs_It & https://www.youtube.com/watch?v=CXFkG34NGkU -->
 
