FutureLearn: The Scientific Revolution.

--- a/science/index.html
+++ b/science/index.html
@@ -298,6 +298,10 @@
 
     <h2>History of Science</h2>
     <ul>
+      <li><strong><a href="https://www.futurelearn.com/courses/scientific-revolution">The Scientific Revolution: Understanding the Roots of Modern Science</a></strong>
+        is a free online course by the University of Groningen hosted on FutureLearn.
+        The first run of the course starts on 30 October 2017.
+      </li>
       <li lang="nl"><a href="http://cas.ou.edu/rienk-vermij">Vermij, Rienk</a>: 
         <i class="booktitle">Kleine geschiedenis van de wetenschap</i>.
         Nieuwezijds, 2005. 
@@ -861,7 +865,7 @@
 
     <h2>Unsorted Links</h2>
     <ul>
-      <li>Sewell, Martin: 
+      <li>Sewell, Martin:
         <a href="http://no-free-lunch.org/">No Free Lunch Theorems</a>.
       </li>
       <li>Coren, Stanley:
