New section: Intros to literary criticism.

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -377,6 +377,27 @@
         <abbr>ISBN</abbr> 978-0295983448.
       </li>
     </ul>
+
+    <p>Introductions to literary criticism:</p>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/playlist?list=PLIlatssdqY5Na_a9r-_Hl1SGmK5M3HJGv">Literary Criticism</a>
+        is a YouTube playlist created by Tim Nance. It contains a handful of videos that introduces
+        major types of literary criticism (New Criticism, Reader Response, Historical Criticism, etcetera).
+      </li>
+      <li>Marc Baldwin:
+        <a href="https://www.youtube.com/watch?v=WmRMjCfLEtA">The Basics of Literary Criticism</a> (13 minutes) and
+        <a href="https://www.youtube.com/watch?v=x6ixulYPtYg">The Major Theories of Literary Criticism</a> (22 minutes)
+        are two short lectures.
+        In the first video, Marc Baldwin says,
+        <q>I'e noticed through the years that when many of my students don't like a work of literature or they call it boring,
+        what they really mean is that they didn't fully appreciate what the writer was doing. They didn't really understand the work.
+        Having a grounding in critical theory can help you better understand and appreciate what you're reading.</q>
+        <br />
+        <a href="http://www.drmarcdbaldwin.com/">Marc Baldwin's old website</a> is no longer being updated.
+      </li>
+    </ul>
+
     <p>People sometimes ask why we need literary theory. Here is one answer (posted on a mailing list in 18 September 1995):</p>
     <blockquote><p>My short (perhaps equally naive) answer to a very complex question is 
       that literary theory (<abbr>l.t.</abbr>) is a body of (more or less coherent) 
