Netherlands eScience Center: ShiCo.

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -390,11 +390,18 @@
         <a href="https://www.youtube.com/watch?v=x6ixulYPtYg">The Major Theories of Literary Criticism</a> (22 minutes)
         are two short lectures.
         In the first video, Marc Baldwin says,
-        <q>I'e noticed through the years that when many of my students don't like a work of literature or they call it boring,
+        <q>I've noticed through the years that when many of my students don't like a work of literature or they call it boring,
         what they really mean is that they didn't fully appreciate what the writer was doing. They didn't really understand the work.
         Having a grounding in critical theory can help you better understand and appreciate what you're reading.</q>
         <br />
         <a href="http://www.drmarcdbaldwin.com/">Marc Baldwin's old website</a> is no longer being updated.
+      </li>
+      <li>
+        <a href="https://www.youtube.com/playlist?list=PLD00D35CBC75941BD">Introduction to Theory of Literature with Paul H. Fry</a>
+        is a series of 26 videos that gives an overview of twentieth-century literary criticism.
+        They are based on a series of lectures recorded in 2009 at Yale University 
+        (see the description on <a href="http://oyc.yale.edu/english/engl-300">Open Yale courses</a>).
+        Each video is between 40 and 55 minutes long.
       </li>
     </ul>
 
