--- a/science/index.html
+++ b/science/index.html
@@ -910,6 +910,10 @@
         <i class="blog">the morning paper</i>, 25.09.2017.
         <!--@@PDF-->
       </li>
+      <li>Netherlands eScience Center:
+        <a href="https://github.com/NLeSC/ShiCo"><abbr>ShiCo</abbr>: Shifting Concepts Through Time project</a>:
+        <q>ShiCo is a tool for visualizing time shifting concepts. We refer to a concept as the set of words which are related to a given seed word. ShiCo uses a set of semantic models (word2vec) spanning a number of years to explore how concepts change over time -- words related to a given concept at time <i class="mathnotation">t=0</i> may differ from the words related to the same concept at time <i class="mathnotation">t=n</i>.</q>
+      </li>
     </ul>
   </main>
 
