+ h2: Russia under Vladimir Putin.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1675,6 +1675,38 @@
       -->
     </ul>
 
+    <h3>Russia Under Vladimir Putin</h3>
+    <ul>
+      <li>Kasparov, Garry:
+        <i class="booktitle">Winter Is Coming: Why Vladimir Putin and the Enemies of the Free World Must Be Stopped</i>. 
+        PublicAffairs, 2015. (320 pages)
+        <a href="http://www.publicaffairsbooks.com/book/hardcover/winter-is-coming/9781610396202"><abbr>ISBN</abbr> 9781610396455</a>.
+        <br />See also
+        <a href="http://www.kasparov.com/winter-is-coming/">Garry Kasparov's website</a>.
+        <!--@@talks by Kasparov on YouTube?-->
+        <br />Garry Kasparov on <a href="https://twitter.com/Kasparov63/status/916375648951775232">06.10.2017</a>:
+        <q>In Russia, the press isn't free but Putin pretends that it is. In America, the press is free but Trump openly wishes that it weren't.</q>
+      </li>
+      <li>Gessen, Masha:
+        <i class="booktitle">The Future Is History: How Totalitarianism Reclaimed Russia</i>. Riverhead Books (Penguin RandomHouse), 2017.
+        <a href="http://www.publicaffairsbooks.com/book/first-person/9781586480189"><abbr>ISBN</abbr> 978-0525534068</a>.
+        <br />See also 
+        <a href="https://www.penguinrandomhouse.com/authors/9953/masha-gessen">other books by Masha Gessen published by Penguin</a>
+        and a
+        <a href="https://en.wikipedia.org/wiki/Masha_Gessen#Works_and_publications">longer list of Masha Gessen's publications</a>.
+      </li>
+    </ul>
+    <!--
+      * Putin et al: First Person. PublicAffairs, 2000: http://www.publicaffairsbooks.com/book/first-person/9781586480189 
+      * Masha Gessen: The Future Is History: How Totalitarianism Reclaimed Russia. Penguin RandomHouse, 2017: https://www.penguinrandomhouse.com/books/318687/the-future-is-history-by-masha-gessen/9781594634536/ 
+        - See interview by Amy Goodman (Democracy Now): 'Masha Gessen: Trump Doing "Incredible Damage" to Democracy While Media is Obsessed with Russia Probe', 05.10.2017: https://www.youtube.com/watch?v=Lf61IK6-CAY 
+          Geshen says that "Putin is the dictator that Trump plays on tv"; Trump really wants to be like Putin. 
+          Putin thinks that Trump is a clown; Putin actually used the Russian word "colourful" (yerki/yarki) but someone must have translated it as "bright".
+          When later a journalist asked why Putin called Trump "bright", Putin could barely suppress a smile because journalists got the story wrong.
+          The USA are on the brink of losing diplomatic relations with Russia.
+        - National Book Foundation: http://www.nationalbook.org/nba2017-nf-gessen-future-is-history.html 
+    -->
+
     <h3>Geopolitics</h3>
     <ul>
       <li>Copeland, Miles:
