--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1476,6 +1476,10 @@
     </p>
     <p>See also:</p>
     <ul>
+      <li>
+        <a href="https://www.youtube.com/watch?v=sKTmwu3ynOY">Naomi Klein on Global Neoliberalism</a>
+        (BigThink on YouTube, 14 minutes, 23.04.2012).
+      </li>
       <li><a href="https://en.wikipedia.org/wiki/Donald_Ewen_Cameron">Donald Ewen Cameron</a>:
         some of this research took place in the context of the 
         <a href="https://en.wikipedia.org/wiki/Project_MKUltra">Project MKUltra</a> mind control program,
@@ -1494,25 +1498,9 @@
         <a href="https://en.wikipedia.org/wiki/1976_Argentine_coup_d%27%C3%A9tat">1976 Argentine coup d'état</a>
         (president Isabel Perón is replaced by a military junta led by General Jorge Rafael Videla and others) 
       </li>
-      <li>Friedman, Milton:
-        <i class="booktitle">Capitalism and Freedom</i>. 1962.
-      </li>
-      <li>Friedman, Milton; Friedman, Rose D.:
-        <i class="booktitle">Two Lucky People: Memoirs</i>. 1998.
-      </li>
-      <li>The Progressive Voice:
-        <a href="https://www.youtube.com/watch?v=3ATebIivh1k">Economist Milton Friedman DESTROYED By Economist Mark Blyth For 'Stupid Economic Ideas'</a>
-        (YouTube, 5 minutes, 02.09.2017).
-        <a href="https://en.wikipedia.org/wiki/Mark_Blyth">Mark Blyth</a> is the author of
-        <a href="https://global.oup.com/academic/product/austerity-9780199389445"><i class="booktitle">Austerity: The History of a Dangerous Idea</i></a>
-        (Oxford University Press, 2013).
-      </li>
       <li><a href="https://en.wikipedia.org/wiki/Eduardo_Galeano">Galeano, Eduardo</a>:
         <a href="https://en.wikipedia.org/wiki/Days_and_Nights_of_Love_and_War" class="booktitle">Days and Nights of Love and War</a>. 1983.
         (Originally in Spanish: <i class="booktitle" lang="es">Días y Noches de Amor y de Guerra</i>, 1978.)
-      </li>
-      <li>Hayek, Friedrich A.:
-        <i class="booktitle">The Road to Serfdom</i>. 1944. 
       </li>
       <li>Keynes, John Maynard:
         <i class="booktitle">The End of Laissez-Faire</i>. 1926. 
@@ -1529,9 +1517,6 @@
       <li>Williamson, John, ed.:
         <i class="booktitle">The Political Economy of Policy Reform</i>.
         Washington <abbr>D.C.</abbr>: Institute for International Economics, 1994.
-      </li>
-      <li>Conaghan, Catherine M.; Malloy, James M.:
-        <i class="booktitle">Unsettling Statecraft: Democracy and Neoliberalism in the Central Andes</i>. Pittsburgh, <abbr>PA</abbr>: Universit of Pittsburgh Press, 1994.
       </li>
       <li>Stiglitz, Joseph E.:
         <i class="booktitle">Globalization and its Discontents</i>. New York: W. W. Norton &amp; Company, 2002.
@@ -1557,18 +1542,8 @@
       <li>Budhoo, Davison L.:
         <i class="booktitle">Enough Is Enough: Dear Mr. Camdessus &hellip; Open Letter of Resignation to the Managing Director of the International Monetary Fund</i>. New York: New Horizons Press, 1990.
       </li>
-      <li>Monbiot, George:
-        <a href="https://www.theguardian.com/books/2016/apr/15/neoliberalism-ideology-problem-george-monbiot">Neoliberalism – the ideology at the root of all our problems</a>,
-        <i class="newspaper">The Guardian</i>, 15 April 2016.
-        <blockquote><p>Imagine if the people of the Soviet Union had never heard of communism. 
-          The ideology that dominates our lives has, for most of us, no name. 
-          Mention it in conversation and you’ll be rewarded with a shrug. 
-          Even if your listeners have heard the term before, they will struggle to define it. 
-          Neoliberalism: do you know what it is?</p>
-        </blockquote>
-      </li>
       <li>Numerous more recent articles, blogposts and tweets that point out how relevant 
-        the shock doctrine is to recent events (<abbr>e.g.</abbr> Trump's election as president of the United States):
+        the shock doctrine is to political events in 2016 (<abbr>e.g.</abbr> Trump's election as president of the United States):
         <ul>
           <li>Harkins, Bernard: <a href="https://niume.com/post/290334">The Shock Doctrine - A Book by Naomi Klein</a>,
             review published on 20 March 2017.
@@ -1618,6 +1593,49 @@
             <i class="magazine">London Review of Books</i>, Volume 38, Number 14 (14 July 2016).
           </li>
         </ul>
+      </li>
+    </ul>
+
+    <h3>Neoliberalism</h3>
+    <p>Much of Naomi Klein's book is about the increasing influence of neoliberal ideology.</p>
+    <ul>
+      <li>Monbiot, George:
+        <a href="https://www.theguardian.com/books/2016/apr/15/neoliberalism-ideology-problem-george-monbiot">Neoliberalism – the ideology at the root of all our problems</a>,
+        <i class="newspaper">The Guardian</i>, 15 April 2016.
+        <blockquote><p>Imagine if the people of the Soviet Union had never heard of communism. 
+          The ideology that dominates our lives has, for most of us, no name. 
+          Mention it in conversation and you’ll be rewarded with a shrug. 
+          Even if your listeners have heard the term before, they will struggle to define it. 
+          Neoliberalism: do you know what it is?</p>
+        </blockquote>
+      </li>
+      <li>Verso books:
+        <a href="https://www.youtube.com/watch?v=Z7MFJ4EFezQ">Neoliberalism, Climate Change, Migration: George Monbiot in conversation with Verso</a>
+        (YouTube, 17 minutes, 15.03.2017).
+        (Excerpts from the previous video:
+        <a href="https://www.youtube.com/watch?v=uRffgKRnLMU">George Monbiot: Are Brexit and Trump Neoliberal?</a>
+        (YouTube, 2 minutes, 15.03.2017);
+        <a href="https://www.youtube.com/watch?v=UuMntvVwwWM">George Monbiot on Neoliberalism: "A self-serving racket"</a>
+        (YouTube, 2 minutes, 15.03.2017).)
+      </li>
+      <li>Friedman, Milton:
+        <i class="booktitle">Capitalism and Freedom</i>. 1962.
+      </li>
+      <li>Friedman, Milton; Friedman, Rose D.:
+        <i class="booktitle">Two Lucky People: Memoirs</i>. 1998.
+      </li>
+      <li>The Progressive Voice:
+        <a href="https://www.youtube.com/watch?v=3ATebIivh1k">Economist Milton Friedman DESTROYED By Economist Mark Blyth For 'Stupid Economic Ideas'</a>
+        (YouTube, 5 minutes, 02.09.2017).
+        <a href="https://en.wikipedia.org/wiki/Mark_Blyth">Mark Blyth</a> is the author of
+        <a href="https://global.oup.com/academic/product/austerity-9780199389445"><i class="booktitle">Austerity: The History of a Dangerous Idea</i></a>
+        (Oxford University Press, 2013).
+      </li>
+      <li>Hayek, Friedrich A.:
+        <i class="booktitle">The Road to Serfdom</i>. 1944. 
+      </li>
+      <li>Conaghan, Catherine M.; Malloy, James M.:
+        <i class="booktitle">Unsettling Statecraft: Democracy and Neoliberalism in the Central Andes</i>. Pittsburgh, <abbr>PA</abbr>: Universit of Pittsburgh Press, 1994.
       </li>
     </ul>
 
