Unstatistik des Monats.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1688,7 +1688,7 @@
       <!-- 
       <li>
         <i class="booktitle"></i>.
-        <a href=""><abbr>ISBN</abbr>: </a>
+        <a href=""><abbr>ISBN</abbr> </a>.
       </li>
       -->
     </ul>
