--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -301,6 +301,17 @@
       </li>
       -->
     </ul>
+
+    <h2>Other Links</h2>
+    <ul>
+      <li>
+        <a href="http://www.rwi-essen.de/unstatistik/" hreflang="de" lang="de">Unstatistik des Monats</a>:
+        German website where Thomas K. Bauer, Gerd Gigerenzer, Walter Krämer
+        take a critical look at newspaper articles and other publications that contain
+        (potentially) misleading statistics or numbers.
+      </li>
+    </ul>
+
   </main>
 
   <footer>
