--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1163,6 +1163,11 @@
         <a href="https://www.theguardian.com/news/2012/sep/23/weatherwatch-climate-ghengis-khan-mongolia">Weatherwatch: Climate helped Genghis Khan create the Mongol empire</a>,
         <i class="newspaper">The Guardian</i>, 23.09.2012.)
       </li>
+      <li>Naomi Klein:
+        <a href="https://www.youtube.com/watch?v=a5LuIAJEFUc">Capitalism and Climate Change</a>,
+        Festival of Dangerous Ideas, Sydney Opera House, 05–06 September 2015
+        (YouTube, 58 minutes, 05.09.2015).
+      </li>
     </ul>
 
     <h4>Deportation of Mexicans from the <abbr>USA</abbr> in the 1930s</h4>
@@ -1480,6 +1485,10 @@
         <a href="https://www.youtube.com/watch?v=sKTmwu3ynOY">Naomi Klein on Global Neoliberalism</a>
         (BigThink on YouTube, 14 minutes, 23.04.2012).
       </li>
+      <li>The Intercept:
+        <a href="https://www.youtube.com/watch?v=sTcELLklap4">Naomi Klein: How to Resist Trump's Shock Doctrine</a>
+        (YouTube, 9 minutes, 13.06.2017).
+      </li>
       <li><a href="https://en.wikipedia.org/wiki/Donald_Ewen_Cameron">Donald Ewen Cameron</a>:
         some of this research took place in the context of the 
         <a href="https://en.wikipedia.org/wiki/Project_MKUltra">Project MKUltra</a> mind control program,
@@ -1612,11 +1621,15 @@
       <li>Verso books:
         <a href="https://www.youtube.com/watch?v=Z7MFJ4EFezQ">Neoliberalism, Climate Change, Migration: George Monbiot in conversation with Verso</a>
         (YouTube, 17 minutes, 15.03.2017).
-        (Excerpts from the previous video:
-        <a href="https://www.youtube.com/watch?v=uRffgKRnLMU">George Monbiot: Are Brexit and Trump Neoliberal?</a>
-        (YouTube, 2 minutes, 15.03.2017);
-        <a href="https://www.youtube.com/watch?v=UuMntvVwwWM">George Monbiot on Neoliberalism: "A self-serving racket"</a>
-        (YouTube, 2 minutes, 15.03.2017).)
+        (Short excerpts from the previous video:
+        <a href="https://www.youtube.com/watch?v=uRffgKRnLMU">George Monbiot: Are Brexit and Trump Neoliberal?</a>,
+        <a href="https://www.youtube.com/watch?v=65usnzkhiR0">George Monbiot: "We have sixty years of harvest left"</a>,
+        <a href="https://www.youtube.com/watch?v=UuMntvVwwWM">George Monbiot on Neoliberalism: "A self-serving racket"</a>,
+        <a href="https://www.youtube.com/watch?v=QysA6KxTiCs">"Immigration is going to remain a huge issue for a very long time"</a>.)
+      </li>
+      <li>Verso Books:
+        <a href="https://www.youtube.com/watch?v=M2SxP4PANr4">We need to radically reorganise politics: George Monbiot in conversation with Verso Books</a>
+        (YouTube, 16 minutes, 21.09.2017).
       </li>
       <li>Friedman, Milton:
         <i class="booktitle">Capitalism and Freedom</i>. 1962.
