Robert Talisse recommendations on Pragmatism.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1335,6 +1335,16 @@
         <a href="https://aeon.co/essays/without-conversation-philosophy-is-just-dogma">Talk with me / >Without conversation, philosophy is just dogma</a>,
         <i class="website">Aeon</i>, no date (September/October 2017).
       </li>
+      <li>Robert Talisse:
+        <a href="https://fivebooks.com/interview/robert-talisse-on-pragmatism/">The best books on Pragmatism</a>,
+        <i class="website">Five Books</i> (October 2017?).
+        The five recommendations are the following:
+        <i class="booktitle">Philosophical Writings of Peirce</i> by C. S. Peirce,
+        <i class="booktitle">Pragmatism</i> by William James,
+        <i class="booktitle">Reconstruction in Philosophy</i> by John Dewey,
+        <i class="booktitle">From a Logical Point of View</i> by William V. O. Quine, and
+        <i class="booktitle">Truth, Politics and Morality</i> by Cheryl Misak.
+      </li>
       <!-- @@move to humanities
         https://twitter.com/redaktionmerkur
       <li>
