N. Klein 2007 interview; N. Klein at Coral Gables.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1481,6 +1481,14 @@
     </p>
     <p>See also:</p>
     <ul>
+      <li>The Film Archives:
+        <a href="https://www.youtube.com/watch?v=mGmB63TIHLY">The Shock Doctrine: The Rise of Disaster Capitalism - Interview with Naomi Klein (2007)</a>
+        (YouTube, 57 minutes, 09.05.2013).
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=XZJKi1VHdpU">Naomi Klein on The Shock Doctrine, The Rise of Disaster Capitalism</a>
+        (YouTube, 60 minutes, 03.02.2012): Naomi Klein speaking at the Coral Gables Congregational Church in Miami, Florida.
+      </li>
       <li>
         <a href="https://www.youtube.com/watch?v=sKTmwu3ynOY">Naomi Klein on Global Neoliberalism</a>
         (BigThink on YouTube, 14 minutes, 23.04.2012).
