Hegel on Philosophy Stack Exchange.

--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -137,6 +137,12 @@
       <li lang="de">Stadtbibliothek Stuttgart: 
         <a href="http://www1.stuttgart.de/stadtbibliothek/bvs/ausgabe.php?sid=205">Georg Wilhelm Friedrich Hegel</a>.
       </li>
+      <li><a href="https://philosophy.stackexchange.com/q/40052/23586">How to study Hegel?</a>:
+        a question asked on Philosophy Stack Exchange.
+      </li>
+      <li><a href="https://philosophy.stackexchange.com/questions/tagged/hegel">Questions tagged &ldquo;Hegel&rdquo;</a>
+        on Philosophy Stack Exchange.
+      </li>
     </ul>
   </main>
 
