--- a/philscience/index.html
+++ b/philscience/index.html
@@ -337,6 +337,11 @@
         <!-- see also http://2014.scifuture.org/philosophy-of-science-what-why/ -->
         <!-- Do an image search for "scientific method" to see many different representations: https://duckduckgo.com/?q=%22scientific+method%22&iax=1&ia=images -->
       </li>
+      <li>Hakob Barseghyan:
+        <a href="https://www.youtube.com/playlist?list=PLcVi-VLWtPfbJ15MzQXqILIjhzfYCziRw"><abbr>HPS</abbr>100 Introductory History and Philosophy of Science</a>:
+        playlist of 12 videos that vary in length between 30 and 60 minutes
+        (except the introductory video, which is 8 minutes long).
+      </li>
       <li>The Royal Institution:
         <a href="https://www.youtube.com/watch?v=1uzsuCFUQ68">Why science is NOT 'Just a Theory'</a>
         (4 minutes, YouTube).
