Books etc. about neoliberalism.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1710,6 +1710,46 @@
         <!-- Colin Crouch also wrote "Post-Democracy": http://politybooks.com/bookdetail/?isbn=9780745633145 -->
       </li>
       <!-- About neoconservatism rather than neoliberalism? Nancy MacLean: "Democracy in Chains: The Deep History of the Radical Right's Stealth Plan for America" Viking, 2017. -->
+      <li><span lang="de">Biebricher, Thomas:
+        <i class="booktitle">Neoliberalismus zur Einführung</i>. 2. überarbeitete Auflage. Junius</span>.
+        <a href="https://www.junius-verlag.de/buecher/neoliberalismus"><abbr>ISBN</abbr> 978-3-88506-743-6</a>.
+      </li>
+      <li><span lang="de">Willke, Gerhard:
+        <i class="booktitle">Neoliberalismus</i>. Campus Einführungen. Campus</span>, 2003.
+        <a href="http://www.campus.de/buecher-campus-verlag/wissenschaft/soziologie/neoliberalismus-1906.html"><abbr>ISBN</abbr> 9783593372082</a>.
+      </li>
+      <li lang="de">Biebricher, Thomas:
+        <i class="booktitle">Der Staat des Neoliberalismus</i>. Nomos, 2016.
+        <a href="http://www.nomos-shop.de/Biebricher-Staat-Neoliberalismus/productview.aspx?product=27655"><abbr>ISBN</abbr> 978-3-8487-3256-2</a>.
+      </li>
+      <li lang="de">Thielemann, Ulrich:
+        <i class="booktitle">Wettbewerb als Gerechtigkeitskonzept. Kritik des Neoliberalismus</i>. Metropolis, 2010.
+        <a href="http://www.metropolis-verlag.de/Wettbewerb-als-Gerechtigkeitskonzept/833/book.do"><abbr>ISBN</abbr> 978-3-89518-833-6</a>.
+      </li>
+      <li lang="de">Blankenburg, Stephanie; Schui, Herbert:
+        <i class="booktitle">Neoliberalismus: Theorie, Gegner, Praxis</i>. <abbr>VSA</abbr> Verlag, 2002.
+        <a href="http://www.vsa-verlag.de/detail/artikel/neoliberalismus-theorie-gegner-praxis-1/"><abbr>ISBN</abbr> 3-87975-854-9 1</a>.
+      </li>
+      <li lang="de">Brand, Ulrich:
+        <i class="booktitle">Post-Neoliberalismus? Aktuelle Konflikte und gegenhegemoniale Strategien</i>. <abbr>VSA</abbr> Verlag, 2011.
+        <a href="http://www.vsa-verlag.de/detail/artikel/post-neoliberalismus/"><abbr>ISBN</abbr> 978-3-89965-424-0</a>.
+      </li>
+      <li lang="de">Nicoll, Norbert:
+        <i class="booktitle">Neoliberalismus. Ungleichheit als Programm</i>. Unrast Verlag, 2013.
+        <a href="https://www.unrast-verlag.de/gesamtprogramm/allgemeines-programm/politik-gesellschaft/neoliberalismus-414-detail"><abbr>ISBN</abbr> 978-3-89771-534-9</a>.
+      </li>
+      <li lang="de">Lobbypedia:
+        <a href="https://lobbypedia.de/wiki/Neoliberalismus">Neoliberalismus</a>.
+      </li>
+      <li lang="de">Konrad-Adenauer-Stiftung:
+        <a href="http://www.kas.de/wf/de/71.11514/">Neoliberalismus</a>.
+        (<q>Manchen Begriffen wird bewusst Gewalt angetan. „Neoliberalismus“ ist ein solcher Fall.</q>)
+      </li>
+      <li lang="de"><span lang="en">Brown, Wendy</span>:
+        <i class="booktitle">Die schleichende Revolution - Wie der Neoliberalismus die Demokratie zerstört</i>. Suhrkamp, 2015.
+        <a href="http://www.suhrkamp.de/buecher/die_schleichende_revolution-wendy_brown_58681.html"><abbr>ISBN</abbr> 978-3-518-58681-5</a>.
+        (<span lang="en">Translation of <i class="booktitle">Undoing the Demos</i>.)
+      </li>
       <li>Friedman, Milton:
         <i class="booktitle">Capitalism and Freedom</i>. 1962.
       </li>
@@ -1778,7 +1818,7 @@
         Penguin, 2002. (384 pages)
         <a href="https://www.penguin.co.uk/books/23148/the-penguin-history-of-economics/9780140260427/"><abbr>ISBN</abbr>: 9780140260427</a>
       </li>
-      <!-- 
+      <!--
       <li>
         <i class="booktitle"></i>.
         <a href=""><abbr>ISBN</abbr> </a>.
