+ h2: Is Psychology a Science?

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -604,6 +604,17 @@
       </li>
     </ul>
 
+    <h2>Is Psychology a Science?</h2>
+    <ul>
+      <li>University of Derby:
+        <a href="https://www.youtube.com/watch?v=eUikMLI6spI">Is Psychology a Science?</a>
+        (YouTube, 16 minutes, 23.04.2012): psychology students debate this question.
+      </li>
+      <li>Nick Brown:
+        <a href="https://www.youtube.com/watch?v=SPtWPBapyF0">Limits of Scientific Psychology</a>
+        (YouTube, 16 minutes, 13.12.2015): presentation at <abbr>TEDx</abbr>Rhodes, 05.09.2015.
+      </li>
+    </ul>
 
     <h2>Other Links</h2>
     <ul>
