Is Psychology a Science: Banyard, Rosenberg, ...

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -614,6 +614,23 @@
         <a href="https://www.youtube.com/watch?v=SPtWPBapyF0">Limits of Scientific Psychology</a>
         (YouTube, 16 minutes, 13.12.2015): presentation at <abbr>TEDx</abbr>Rhodes, 05.09.2015.
       </li>
+      <li>Phil Banyard:
+        <a href="https://thepsychologist.bps.org.uk/where-psychologys-non-stick-frying-pan">Where is psychology's non-stick frying pan?</a>,
+        <i class="magazine">The Psychologist</i>, 12.08.2015.
+      </li>
+      <li>
+        <a href="https://thepsychologist.bps.org.uk/volume-28/october-2015/so-have-we-found-psychologys-non-stick-frying-pan">So, have we found psychology's non-stick frying pan?</a>,
+        <i class="magazine">The Psychologist</i>, <abbr>Vol.</abbr> 28 (October 2015): <abbr>pp.</abbr> 782–787:
+        responses to Phil Banyard's letter.
+      </li>
+      <li>Ben Rosenberg:
+        <a href="https://www.psychologyinaction.org/psychology-in-action-1/psychological-science-is-not-broken">Psychological Science Is Not Broken -- It's Maturing</a>,
+        <i class="blog">Psychology In Action</i>, 12.10.2017.
+      </li>
+      <li>David B. Feldman:
+        <a href="https://www.psychologytoday.com/blog/supersurvivors/201710/is-psychology-really-science">Is Psychology Really a Science?</a>,
+        <i class="blog">Supervisors</i> (blog on <i class="website">Psychology Today</i>), 06.10.2017.
+      </li>
     </ul>
 
     <h2>Other Links</h2>
