Minor edits: emphasis, deletions.

--- a/lijst.html
+++ b/lijst.html
@@ -66,7 +66,7 @@
       <a href="https://www.peterlang.com/view/product/11380"><abbr>ISBN</abbr> 9781906165208</a>.
     </li>
     <li>Bakewell, Sarah:
-      <i class="booktitle">How to Live: A Life of Montaigne in one question and twenty attempts at an answer</i>.
+      <strong><i class="booktitle">How to Live: A Life of Montaigne in one question and twenty attempts at an answer</i></strong>.
       Vintage, 2011. (400 pages)
       <a href="https://www.penguin.co.uk/books/1036899/how-to-live/"><abbr>ISBN</abbr> 9780099485155</a>.
     </li>
@@ -81,7 +81,7 @@
       4th edition. Hackett Publishing, 2008.
       <a href="https://www.hackettpublishing.com/a-rulebook-for-arguments"><abbr>ISBN</abbr> 978-0-87220-954-1</a>. (? 12 €)
     </li>
-    <li lang="nl">Beeckman, Tinneke: <i class="booktitle">Door Spinoza's lens</i>.
+    <li lang="nl">Beeckman, Tinneke: <strong><i class="booktitle">Door Spinoza's lens</i></strong>.
       Kalmthout: Pelckmans, 2012.
       <abbr>ISBN</abbr> 978-90-289-6834-9.
     </li>
@@ -121,10 +121,10 @@
       Harvard University Press, 1983. 
       <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674290716"><abbr>ISBN</abbr> 978 06 74 29 07 16</a>. (? 18 €)
     </li>
-    <li>Hume, David: 
+    <li><del>Hume, David: 
       <strong><i class="booktitle">An Enquiry concerning Human Understanding</i></strong>.
       Edited by Tom L. Beauchamp. Oxford University Press, 1999. (304 pages)
-      <a href="https://global.oup.com/academic/product/an-enquiry-concerning-human-understanding-9780198752486"><abbr>ISBN</abbr> 978-0-19-875248-6</a>. (? 25 €)
+      <a href="https://global.oup.com/academic/product/an-enquiry-concerning-human-understanding-9780198752486"><abbr>ISBN</abbr> 978-0-19-875248-6</a>. (? 25 €)</del>
     </li>
     <li>Locke, John: <i class="booktitle">An Essay concerning Human Understanding</i>. 
       Edited by Pauline Phemister. Oxford University Press, 2008. (576 pages)
@@ -302,7 +302,7 @@
       Thomas Nashe's <i class="booktitle">The Unfortunate Traveller</i> and 
       Thomas Deloney's <i class="booktitle">Jack of Newbury</i>.)</del>
     </li>
-    <li>Kermode, Lloyd (editor): <i class="booktitle">Three Renaissance usury plays: The Three Ladies of London, Englishmen for My Money, The Hog Hath Lost His Pearl</i>.
+    <li>Kermode, Lloyd (editor): <i class="booktitle">Three Renaissance Usury Plays: The Three Ladies of London, Englishmen for My Money, The Hog Hath Lost His Pearl</i>.
       Manchester University Press, 2014. (396 pages)
       <a href="http://www.manchesteruniversitypress.co.uk/9780719072635/"><abbr>ISBN</abbr> 978-0-7190-7263-5</a>.
       (Contains 
