More webpages about fallacies.

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -249,7 +249,7 @@
       </li>
     </ul>
 
-    <h2>Cognitive Biases and Thinking Errors</h2>
+    <h2>Cognitive Biases, Fallacies and Thinking Errors</h2>
     <ul>
       <li>
         <a href="http://rationalwiki.org/wiki/List_of_cognitive_biases">List of 
@@ -268,6 +268,12 @@
         deviations from a standard of rationality or good judgment, 
         and are often studied in psychology and behavioral economics.</q>
         Most of these biases have articles of their own.
+      </li>
+      <li>The Fallacy Files:
+        <a href="http://www.fallacyfiles.org/taxonomy.html">Taconomy of Logical Fallacies</a>.
+      </li>
+      <li>The Skeptic's Guide to the Universe:
+        <a href="http://www.theskepticsguide.org/resources/logical-fallacies">Logical Fallacies</a>.
       </li>
       <!-- 
         "False analogy" in the Skeptic's Dictionary: http://skepdic.com/falseanalogy.html 
