--- a/lijst.html
+++ b/lijst.html
@@ -95,15 +95,15 @@
     </li>
     <li>Ayer, A. J.: <i class="booktitle">Logical Positivism</i>. 
       Free Press, 1966.
-      <abbr>ISBN</abbr> 978 00 29 01 13 00. (? 25 €)
+      <a href="http://www.simonandschuster.com/books/Logical-Positivism/A-J-Ayer/9780029011300"><abbr>ISBN</abbr> 978 00 29 01 13 00</a>. (? 25 €)
     </li>
     <li>Burger, Edward B.; Starbird, Michael: <i class="booktitle">The 5 Elements of Effective Thinking</i>.
       Princeton University Press, 2012. 
-      <abbr>ISBN</abbr> 978-0691156668. (? 19 €)
+      <a href="https://press.princeton.edu/titles/9810.html"><abbr>ISBN</abbr> 978-0691156668</a>. (? 19 €)
     </li>
     <li>Dennett, Daniel C.: <i class="booktitle">Darwin's Dangerous Idea: Evolution and the Meanings of Life</i>.
       Simon &amp; Schuster, 1995. 
-      <abbr>ISBN</abbr> 978 06 84 82 47 10. (? 17 €)
+      <a href="http://www.simonandschuster.com/books/Darwins-Dangerous-Idea/Daniel-C-Dennett/9780684824710"><abbr>ISBN</abbr> 978 06 84 82 47 10</a>. (? 17 €)
     </li>
     <li>Dennett, Daniel C.: <i class="booktitle">Breaking the Spell: Religion as a Natural Phenomenon</i>. 
       Penguin, 2007. (464 pages)
@@ -111,7 +111,7 @@
     </li>
     <li>Feyerabend, Paul: 
       <strong><i class="booktitle">Against Method</i></strong>. Verso, 2010.
-      <abbr>ISBN</abbr> 978-1844674428. (? 20 €)
+      <a href="https://www.versobooks.com/books/442-against-method"><abbr>ISBN</abbr> 978-1844674428</a>. (? 20 €)
     </li>
     <li>Giere, Ronald N.: <i class="booktitle">Explaining Science: A Cognitive Approach</i>. [1988]
       University of Chicago Press, 1990. (344 pages)
@@ -141,7 +141,7 @@
     <li>Osbeck, Lisa M.; Nersessian, Nancy J.; Malone, Kareen R.; Newstetter, Wendy C.: 
       <i class="booktitle">Science as Psychology: Sense-Making and Identity in Science Practice</i>. 
       Cambridge University Press, 2013.
-      <abbr>ISBN</abbr> 978 05 21 70 84 18. (? 24 €)
+      <a href="http://www.cambridge.org/de/academic/subjects/psychology/cognition/science-psychology-sense-making-and-identity-science-practice?format=PB"><abbr>ISBN</abbr> 978 05 21 70 84 18</a>. (? 30 €)
     </li>
     <li>Popper, Karl: <i class="booktitle">Conjectures and Refutations: The Growth of Scientific Knowledge</i>.
       2nd edition. Routledge, 2002. (608 pages)
@@ -153,7 +153,7 @@
     </li>
     <li lang="fr">Prigogine, Ilya; Stengers, Isabelle: <i class="booktitle">La Nouvelle Alliance: Métamorphose de la science</i>.
       Folio Essais. Folio, 1986.
-      <abbr>ISBN</abbr> 978 20 70 32 32 41. (? 12 €)
+      <a href="http://www.folio-lesite.fr/Catalogue/Folio/Folio-essais/La-Nouvelle-Alliance"><abbr>ISBN</abbr> 978 20 70 32 32 41</a>. (? 12 €)
     </li>
     <li>Russell, Bertrand: <i class="booktitle">The Scientific Outlook</i>.
       Routledge, 2009. (240 pages)
