--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1182,6 +1182,24 @@
       </li>
     </ul>
 
+    <h3 lang="fr">Gaston Bachelard (1884 – 1962)</h3>
+    <ul>
+      <li lang="de"><a href="https://de.wikipedia.org/w/index.php?title=Gaston_Bachelard&oldid=160375070">Seite „Gaston Bachelard“</a>. 
+        In: Wikipedia, Die freie Enzyklopädie. Bearbeitungsstand: 5. Dezember 2016, 19:00 <abbr>UTC</abbr>.
+        (Abgerufen: 17. Oktober 2017, 12:43 <abbr>UTC</abbr>).
+      </li>
+      <li><span lang="fr">Jean-Marie Tremblay</span> and others:
+        <a href="http://classiques.uqac.ca/classiques/bachelard_gaston/bachelard_gaston.html" hreflang="fr" lang="fr">Gaston Bachelard, 1884-1962</a>.
+      </li>
+      <li>Gillian Darley:
+        <a href="https://aeon.co/essays/how-gaston-bachelard-gave-the-emotions-of-home-a-philosophy">Intimate spaces / How Gaston Bachelard gave the emotions of home a philosophy</a>,
+        <i class="website">Aeon</i>, 17.10.2017.
+      </li>
+      <li>
+        <a href="https://gastonbachelard.org/" hreflang="fr" lang="fr">Association Internationale Gaston Bachelard</a>.
+      </li>
+    </ul>
+
     <h3>John Searle (born 1932)</h3>
     <ul>
       <li>Searle, John R.: 
