Minor edits (abbr).

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -78,7 +78,7 @@
     <h3>Methods and Tools</h3>
     <p>Philosophers have developed many methods and tools to help them think.
       They have developed rules for argumentation, logic, ways of criticising ideas
-      (e.g. by identifying fallacies), thought experiments, <abbr>etc</abbr>.
+      (<abbr>e.g.</abbr> by identifying fallacies), thought experiments, <abbr>etc</abbr>.
       In addition, practising philosophers also need reading and writing skills.
       The following books cover many of these methods and tools.
     </p>
